# job-search-app

./: .gitignore  README.md
backend/: pyproject.toml
backend/app/: main.py
frontend/src/: App.tsx
mobile/job_search_mobile/: README.md  pubspec.yaml
mobile/job_search_mobile/android/app/: build.gradle.kts
mobile/job_search_mobile/android/app/src/main/: AndroidManifest.xml
mobile/job_search_mobile/android/app/src/main/kotlin/com/example/job_search_mobile/: MainActivity.kt
mobile/job_search_mobile/ios/Runner/: Info.plist
mobile/job_search_mobile/ios/Runner.xcodeproj/: project.pbxproj
mobile/job_search_mobile/lib/: main.dart
mobile/job_search_mobile/linux/: CMakeLists.txt
mobile/job_search_mobile/linux/runner/: my_application.cc
mobile/job_search_mobile/macos/Runner.xcodeproj/: project.pbxproj
mobile/job_search_mobile/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
mobile/job_search_mobile/macos/Runner/Configs/: AppInfo.xcconfig
mobile/job_search_mobile/test/: widget_test.dart
mobile/job_search_mobile/web/: index.html  manifest.json
mobile/job_search_mobile/windows/: CMakeLists.txt
mobile/job_search_mobile/windows/runner/: Runner.rc  main.cpp
