[tool.poetry]
name = "job-search-backend"
version = "0.1.0"
description = "Backend for job search app"
authors = ["Anshul"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.129.0"
uvicorn = {extras = ["standard"], version = "^0.40.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
dev = "uvicorn:main"